# tablejohn

./: .env  .prettierignore  Cargo.toml  DESIGN.md  README.md  build.rs  flake.nix  rust-toolchain.toml  tsconfig.json
.sqlx/: query-02a0484f131cdd7420fb073dec5c9ed2758e21a6bf74026ba3e19cba1d274536.json  query-039485fead98beb9d088c5bb35679f2ab0409e7e6b51607869ec30ef35240504.json  query-091ccc5f03da1f11d8efafe1a0082e62f7973dc2d35835693dd5bdd696759de0.json  query-09c34c5cef41d9833c345c8447d35a975a4b76dd2c7b3ad169674e3a6acf6862.json  query-09d6281af1344afb2d6265149d4026e72badc3e18bc53a03e6b78011ee270ee1.json  query-09e16f417f6b7626d7350f4fdb6b3061f3c63535b20a1108186c0c652297b1bd.json  query-0a4a3c4090e70ca643c4af0368ecf5c8dde66d898a900afa299a94e9a7bc62f8.json  query-0ac905715f402ec22f28dad89ba60f21644418d1f483aecbcd425a0b69c16bb3.json  query-0d2711c13a7835dd6a6708c2dc81ca15ab3a58a8553a5837351ec63265edb5c2.json  query-0d36a4c7d21f4688db1cf309fd04c1f56ff147b7f80d8844bb2b5bad63dab372.json  query-0dc1d000038b42bbbcfe16a11cb8c89a86ba9bb71368a413eb90593f5da166e0.json  query-11b41ecfe4b4eae5f36d1c033f831220f9103168bfdce0fa3a676b0ec12b9d11.json  query-14dc7ea3da2200eddf0e9087594180f71c52d2107823066681e29bc2711e911f.json  query-167a3c4e2ea3540b2608b75019a112916c8f4c413355366cca8b3e41715081c6.json  query-185c3516e116876f1783f25ffeb179ca6ecb4f9a001a48127516a81b7a50062a.json  query-1b572ecd6904a13d78070bc6aeef3a4f349baa5b880aaa1d141b516a34517b4b.json  query-1d1807ce05adb453b5cfef85cff930e974faa9455e7114a1555d78f2d1911898.json  query-1df4bf7bd7040b8aef0865f2c4a48dc89a3b39e6f86629df9fdcdc5b50b782ef.json  query-1df8ec0b41dbafe191f6990d6be6f6f3c9d86ea9ca8112f16b5735b1193ea243.json  query-1e09e422a6fd826b7dfdaf52a271e77672c4dbc933af42a59fd8a8459e495732.json  query-249aa7a29ae6f1746b9c56ff4fbe9038a48ee5f32116a163af60617e0394de9c.json  query-25e9bf1ca16d2ad13900bfbc8908531139b00e341dfa392a9d5136bc180559ac.json  query-26bf8f43e0fa607ddfabb0611ee95c8ed1fef2d1aa76749b660228cd38a84283.json  query-2846970f979d84f4ba4ba2cd659fc37347ea280ebdf584bc535f135f63610a66.json  query-2af3e5b2458b2674034853428f264190c2c1614d8df8dd831fd668c121786e88.json  query-2afda30451ececd424b4af3d8b106bdc99d72c8e3e0579cb6d3df8e66429bad1.json  query-2d4ddb045e286955334793d7610f1f1ee1d7d825031b003db6117231a16d2f50.json  query-2dc2eb48b5b028483500adf2cb17b96cddd8b2201cdfc756e0b5c266d4d34720.json  query-3204ae1d17471bf90a056119f164dd4f42670801bd647fb962f0ba8de37b050e.json  query-3227b67648549c213c6ad34c78842a8d8120d3202f002d293e674cac994adedc.json  query-32f0ac59687e5455bb38060dc1d6cd181a86cd6ca7ac2f583a33212c8b7bef1a.json  query-33cbc60a8d06adf3c3836d4193a80139615b69896a84dd1340759db6adbebf1f.json  query-3514cb91d76683ccdf40ef732ae6062327d6b4aa1acd96632cb934b2d8495b9d.json  query-35324f9148e3e7ce2d2aa62d69378ce28a2398b408bbc99ea1299315904d6673.json  query-35e5c16c2952f550783b234f27839cf5110d11798d749f523d0e0c98a77194f5.json  query-3620648a1003211c184423a3c13b6eae3500b888490430fbaf20517830db508e.json  query-373c31648cfc15a3a42b51dc74025ee5fb1a90da7ecaf4bf4b330076f33e74dd.json  query-37d23c0a75a66e41fbdc1f26e166a03a685532e5193b0c0ea330157b4334ab4e.json  query-39e21f75c4f68be1e4f64c4a9c0a38974f12556b6ac463f21f7729f758dec886.json  query-3d48dcc84c3d624f7a9f9ebd0399aa9786cb94e2ddda6016fc0e8e0fee46fc98.json  (+94 more)
meta/: format  import_velcom_data  setup  update_sqlx_data  update_sqlx_queries  update_uplot
migrations/: 1_commits.sql  20230805101911_commits.sql  20230806143356_queue.sql  20230809141314_runs.sql  20230815165523_init.sql  20230830194148_metric_index.sql  20231023204335_moar_index.sql  20240513132200_init.sql
scripts/: graph.ts  queue.ts  uPlot.d.ts
scripts/graph/: commits.ts  metrics.ts  requests.ts  state.ts  util.ts
scripts/queue/: main.ts
src/: args.rs  config.rs  db.rs  git.rs  id.rs  main.rs  primitive.rs  recurring.rs  repo.rs  runner.rs  server.rs  shared.rs  somehow.rs  state.rs  update.rs  util.rs  web.rs  worker.rs
src/recurring/: queue.rs  repo.rs
src/runner/: coordinator.rs  server.rs
src/server/: format.rs  git.rs  recurring.rs  runners.rs  util.rs  web.rs  workers.rs
src/server/recurring/: fetch.rs  queue.rs  repo.rs
src/server/web/: admin.rs  api.rs  base.rs  commit.rs  commit_hash.rs  components.rs  index.rs  link.rs  page.rs  pages.rs  paths.rs  queue.rs  queue_id.rs  runner.rs  server_config_ext.rs  static.rs  worker.rs
src/web/: commit.rs  commit_hash.rs  index.rs  queue.rs  static.rs
src/worker/: coordinator.rs  run.rs  server.rs  tree.rs
static/: base.css  main.ts
templates/: base.html  commit.html  commit_hash.html  index.html  queue.html  queue_id.html  queue_inner.html  queue_table.html  runner.html  util.html  worker.html
templates/pages/: commit.html  graph.html  index.html  queue.html  queue_delete.html  queue_inner.html  run_finished.html  worker.html
(+17 files in other folders)
