[package]
name = "tablejohn"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.19", features = ["macros", "headers"] }
axum-extra = { version = "0.7.7", features = ["typed-routing", "query"] }
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive", "deprecated"] }
directories = "5.0.1"
flate2 = "1.0.26"
futures = "0.3.28"
gethostname = "0.4.3"
humantime = "2.1.0"
mime_guess = "2.0.4"
open = "5.0.0"
rand = "0.8.5"
regex = "1.9.3"
rust-embed = { version = "6.8.1", features = ["interpolate-folder-path"] }
serde = { version = "1.0.181", features = ["derive"] }
serde-humanize-rs = "0.1.1"
serde_repr = "0.1.16"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite", "time"] }
tar = { version = "0.4.40", default-features = false }
tempfile = "3.7.1"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"

[dependencies.gix]
version = "0.51.0"
default-features = false
features = ["max-performance-safe", "worktree-stream"]

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["json", "stream", "rustls-tls-native-roots"]

[dependencies.time]
version = "0.3.25"
features = ["formatting", "parsing", "macros", "serde-human-readable"]

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitcl"] }
walkdir = "2.3.3"

[profile.dev.package.sqlx-macros]
opt-level = 3
