[package]
name = "tablejohn"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["query", "typed-routing", "typed-header"] }
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "deprecated"] }
directories = "5.0.1"
env_logger = "0.11.3"
flate2 = "1.0.30"
futures = "0.3.30"
gethostname = "0.4.3"
humantime = "2.1.0"
log = "0.4.21"
mime_guess = "2.0.4"
open = "5.1.2"
rand = "0.8.5"
regex = "1.10.4"
rust-embed = { version = "8.4.0", features = ["interpolate-folder-path"] }
serde = { version = "1.0.201", features = ["derive"] }
serde-humanize-rs = "0.1.1"
serde_repr = "0.1.19"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "time"] }
tar = { version = "0.4.40", default-features = false }
tempfile = "3.10.1"
time = { version = "0.3.36", features = ["formatting", "parsing", "macros", "serde-human-readable"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.12"
walkdir = "2.5.0"

[dependencies.gix]
version = "0.55.2"
default-features = false
features = ["max-performance-safe", "revision", "worktree-stream"]

[dependencies.reqwest]
version = "0.12.4"
default-features = false
features = ["json", "stream", "rustls-tls-native-roots"]

[build-dependencies]
vergen = { version = "8.3.1", features = ["git", "gitcl"] }
walkdir = "2.5.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
